# honeypot

./: .env.example  .gitignore  ADSENSE_COT_SPECKIT.ko.md  DEPLOYMENT_GUIDE.md  Dockerfile  ELECTRON_GUIDE.md  LINKEDIN.md  Makefile  README.md  RUNBOOK.md  SERVICE_GRADE_SPECKIT.ko.md  proto.env.example  pyproject.toml  requirements.txt  test_login.py
.github/workflows/: ci.yml  pages-auto-deploy.yml  production-smoke.yml
app/: auth.py  config.py  logging_config.py  main.py  metrics.py  runtime_scorecard.py  security.py  service_meta.py  state.py
app/routers/: auth.py  chat.py  ops.py  upload.py
app/services/: blob_service.py  demo_pipeline.py  demo_store.py  document_service.py  llm_override.py  openai_service.py  search_service.py
docs/deployment/: CLOUDFLARE_PAGES.md  DEPLOYMENT_GUIDE.md  ELECTRON_GUIDE.md  RAILWAY_DEPLOYMENT.md
docs/evidence/: raw-test-output-2026-03-19.txt  test-results-2026-03-19.md
docs/integration/: CONNECTION_GUIDE.md
docs/ops/: RUNBOOK.md
frontend/: App.tsx  README.md  biome.json  electron-builder.json  handover_sample.json  index.css  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  types.ts  vite-env.d.ts  vitest.config.mts
scripts/: exercise_runtime_scorecard.py
tests/: test_csrf_rotation.py  test_frontend_handover_contract.py  test_input_validation.py  test_llm_override.py  test_metrics_limits.py  test_ops_metrics.py  test_security_headers.py  test_security_runtime.py  test_service_meta.py  test_smoke.py  test_task_manager.py  test_upload_authz.py
tools/: cloudflare_pages.env  release_ops.sh
(+40 files in other folders)
