[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "honeypot"
version = "0.1.0"
description = "Azure-oriented document and handover copilot with service-grade runtime and reviewer surfaces."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Kim", email = "kim@example.com" }]
license = { text = "MIT" }
dependencies = [
  "fastapi==0.121.3",
  "uvicorn[standard]==0.27.0",
  "python-dotenv==1.0.0",
  "azure-storage-blob==12.19.0",
  "azure-ai-formrecognizer==3.3.2",
  "azure-search-documents==11.4.0",
  "azure-identity==1.15.0",
  "azure-keyvault-secrets==4.7.0",
  "openai==1.109.1",
  "httpx==0.28.1",
  "python-multipart==0.0.6",
  "python-docx==1.1.0",
  "PyJWT==2.8.0",
  "pydantic==2.12.5",
  "pydantic-settings==2.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
